# AutoOrderSplitting

./: .gitignore  README.md  pyproject.toml  start_web.ps1
auto_order_splitting/: __init__.py  cli.py  excel_io.py  models.py  normalization.py  splitter.py  supplier_marker.py  web_app.py  web_state.py
auto_order_splitting/web/static/: app.js  index.html  styles.css
tests/: test_excel_io.py  test_splitter.py  test_supplier_marker.py  test_web_app.py
